SIGA-674 Remove unneeded '--add-opens' parameter